--- a/index.html
+++ b/index.html
@@ -1,62 +1,16 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>JackKoo_AboutMe</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" >
-  <link rel="icon"  href="./favicon.ico?">
-  <link href="style_header.css" rel="stylesheet">
-  <link href="style_homepage.css" rel="stylesheet">
-  <!--font-->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-  <!--font-->
-</head>
-<div id="banner"><img src="banner2.gif" style="width:100% ;height:110vh"></div>
-<header>
-  <div id="icon_container" >
-    <img src="favicon.png" id="icon" class="disappear"/> 
-    <span id="name" onclick="page_transition('./index.html')" >Jack Cool</span>
-</div>
-  <ul id="section_container">
-    <li  class="disappear section" onclick="page_transition('./jackcool_course_studied.html')" >Course studied</li>
-    <li  class="disappear section" onclick="page_transition('./jackcool_Intern.html')" > Intern</li>
-    <li  class="disappear section" onclick="page_transition('./jackcool_Tutoring.html')">Tutoring</li>
-    <li  class="disappear section" onclick="page_transition('./jackcool_coding_blog.html')">Coding Blog</li>
-  </ul>
-</header>
-<body id="body">
-  <div class="subsection_breaker">
-    <hr class="disappear subsection_breaker_line">
-    <h1 class="disappear subsection_breaker_block">About Me</h1>
-    <hr class="disappear subsection_breaker_line">
-  </div>
-  <div class="content_box">
-    <div id="myface_container"  class="disappear"><img src="icon.png" id="myface" class="disappear"/></div>
-    <div class="self-intro">
-      <h2 class="disappear">Koo Ho yin,<span class="disappear" id="sign">Jack</span></h2>
-      <p class="disappear">UG Computer Science-HKUST</p>
-      <h3 class="disappear">Contact:</h3>
-      <div class="box">
-        <div class="image_container"><a href = "mailto:hykoo@connect.ust.hk" target="_blank"><img src="HKUST.png" class="disappear contact"></a></div>
-        <div class="image_container"><a href = "https://www.instagram.com/jackkoo6/" target="_blank"><img src="instagram.png" class="disappear contact"></a></div>
-        <div class="image_container"><a href = "https://github.com/jackkoo1207" target="_blank"><img src="github.png" class="disappear contact"></a></div>
-        <div class="image_container"><a href = "https://www.linkedin.com/in/koo-ho-yin-7a1176210/" target="_blank"><img src="Linklin.png" class="disappear contact"></a></div>
-        <div class="image_container"><img src="discord.png" class="disappear contact"></div>
-      </div>
-      <!-- 
-      <div class="container2">
-        <div class="stack" style="--stacks: 3;" >
-          <span style="--index: 0;" class="apple">Jack Cool</span>
-          <span style="--index: 1;" class="apple">Jack Cool</span>
-          <span style="--index: 2;" class="apple">Jack Cool</span>
-        </div>
-        <span class="right"></span>
-      </div>-->
-    </div>
-  </div>
- 
-  <script src="script.js"></script>
-  <script src="page_transition.js"></script>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Jack Cool - Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Comforter+Brush&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
